syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sciatta.hummer.rpc";
option java_outer_classname = "NameNodeRpcProto";

service NameNodeService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc Mkdir(MkdirRequest) returns (MkdirResponse);
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

// Register
message RegisterRequest{
  string ip = 1;
  string hostname = 2;
}
message RegisterResponse{
  int32 status = 1;
}

// Heartbeat
message HeartbeatRequest{
  string ip = 1;
  string hostname = 2;
}
message HeartbeatResponse{
  int32 status = 1;
}

// Mkdir
message MkdirRequest{
  string path = 1;
}
message MkdirResponse{
  int32 status = 1;
}

// Shutdown
message ShutdownRequest{
  int32 code = 1;
}
message ShutdownResponse{
  int32 status = 1;
}